add api to convert existing projects to reference projects
