# workforce-vscode/workforce-vscode/src/service/api/_service.ts
@@ -1,4 +1,4 @@
-import { ExecuteStepRequest, ExecutionPlan, ExecutionPlanResponse, ExecutionStep, ExecutionStepResponse, MachineState, Project, ProjectFile, ReferenceProject } from "lib";
+import { ExecuteStepRequest, ExecutionPlan, ExecutionPlanResponse, ExecutionStep, ExecutionStepResponse, MachineState, Project, ProjectFile, ProjectFileType, ReferenceProject } from "lib";
 
 export interface CodingService {
     ListProjects(): Promise<Project[]>;
@@ -7,6 +7,7 @@ export interface CodingService {
     GetReferenceProject(projectSlug: string): Promise<ReferenceProject | undefined>;
     GetMachineState(projectLocation: string, currentFileLocation: string): Promise<MachineState>;
     CreateProject(project: Project): Promise<Project>;
+    ConvertToReferenceProject(projectSlug: string, name: string, location: string, description: string, projectFileTypes: ProjectFileType[]): Promise<ReferenceProject>;
 
     GetProjectFile(projectSlug: string, fileLocation: string): Promise<ProjectFile | undefined>;
     GetProjectFileFunctionText(projectSlug: string, fileLocation: string, functionName: string): Promise<string>;
